samples/_failures_safe/1761074504_ede389_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9648edf8.c: In function ‘add_log_entry’:
./samples/SAFE/__tmp_9648edf8.c:137:12: error: expected ‘,’ or ‘;’ at end of input
  137 |     struct LogEntry* entry = &analyzer
      |            ^~~~~~~~
./samples/SAFE/__tmp_9648edf8.c:137:12: error: expected declaration or statement at end of input
